# android_camera_v4l2

./: .gitignore  .lldbinit  DEBUG_RECORDING.md  NATIVE_DEBUG_GUIDE.md  README.md  VIDEO_RECORDER_FIXES.md  VIDEO_RECORDING_FEATURE.md  YUYV_FORMAT_FIX.md  build.gradle  file_contexts_fix  selinux_fix.te
.claude/: settings.local.json
docs/: README.md
gradle/wrapper/: gradle-wrapper.properties
openspec/: project.md
openspec/changes/add-direct-device-path-access/: design.md  proposal.md  tasks.md
openspec/changes/add-direct-device-path-access/specs/camera-device-connection/: spec.md
sample/: build.gradle  keystore.jks  keystore_release.jks
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/hsj/sample/: MainActivity.java  PathTestActivity.java  V4L2VideoRecorder.java
sample/src/main/res/layout/: activity_main.xml  activity_path_test.xml
sample/src/main/res/values/: strings.xml
sdk_v4l2_camera/: build.gradle
sdk_v4l2_camera/src/main/: AndroidManifest.xml
sdk_v4l2_camera/src/main/cpp/: CMakeLists.txt
sdk_v4l2_camera/src/main/cpp/libcamera/: CameraAPI.cpp  CameraAPI.h  CameraView.cpp  NativeAPI.cpp  NativeAPI.h
sdk_v4l2_camera/src/main/java/com/hsj/camera/: CameraAPI.java  Logger.java
sign/: platform.keystore  platform.pk12  sign.md
